--- a/App6.3.2_Model3_Testing_threshold_probability_all_variablesF.ipynb
+++ b/App6.3.2_Model3_Testing_threshold_probability_all_variablesF.ipynb
@@ -257,6 +257,43 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e6b00fe9-8d6f-4cba-a7b1-657fe35972c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>png:</strong> 2"
+      ],
+      "text/latex": [
+       "\\textbf{png:} 2"
+      ],
+      "text/markdown": [
+       "**png:** 2"
+      ],
+      "text/plain": [
+       "png \n",
+       "  2 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Open a PNG graphics device\n",
+    "png(\"Fig6.3.2a.png\", width = 800, height = 600)  # Specify the file name and dimensions\n",
+    "\n",
+    "# Plot the decision tree using rpart.plot\n",
+    "rpart.plot(tree)\n",
+    "\n",
+    "# Close the PNG graphics device\n",
+    "dev.off()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "de051841-1f2e-4a72-baf6-b1c4537c4a64",
    "metadata": {
     "tags": []
@@ -303,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "939ee215-5396-4abc-ae3a-2822f445d28d",
    "metadata": {
     "tags": []
@@ -419,11 +456,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "01ecf868-8a45-4ec3-a521-e8d21dfc6545",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>png:</strong> 2"
+      ],
+      "text/latex": [
+       "\\textbf{png:} 2"
+      ],
+      "text/markdown": [
+       "**png:** 2"
+      ],
+      "text/plain": [
+       "png \n",
+       "  2 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Now, save the plots to a PNG file\n",
+    "png(\"Fig6.3.2b.png\", width = 800, height = 600)  # Specify the file name and dimensions\n",
+    "\n",
+    "# Plot the ROC curves and show AUC (same code as before)\n",
+    "par(mfrow=c(1, 2), cex.main=0.8)\n",
+    "plot(emp_train_roc, main=paste(\"Tree on training set\\nAUC =\", round(emp_train_roc$auc, digits=4)))\n",
+    "plot(emp_test_roc, main=paste(\"Tree on test set\\nAUC =\", round(emp_test_roc$auc, digits=4)))\n",
+    "\n",
+    "# Close the PNG graphics device for saving to file\n",
+    "dev.off()"
+   ]
   }
  ],
  "metadata": {
