--- a/App6.1.3_Model1_Selected_variables_Stat_Sign_3staronly.ipynb
+++ b/App6.1.3_Model1_Selected_variables_Stat_Sign_3staronly.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "baf81c4a-a3df-40f2-8c40-04774831c9bf",
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'pROC' was built under R version 3.6.3\"Type 'citation(\"pROC\")' for a citation.\n",
+      "\n",
+      "Attaching package: 'pROC'\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    cov, smooth, var\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -34,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "24ff76c2-2a0e-453e-93a3-5ee4d8bfd01c",
    "metadata": {
     "tags": []
@@ -52,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "4d1f265d-e796-4ecb-b821-66d3cb8160dc",
    "metadata": {
     "tags": []
@@ -153,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "d09bd76c-a685-415f-a46b-6daec2b3814f",
+   "execution_count": 4,
+   "id": "e5d8252f-04fb-41ce-9477-b995f9e641aa",
    "metadata": {
     "tags": []
    },
@@ -166,8 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "549f80bc-a45e-47a3-bcc6-eee9bb582c89",
+   "execution_count": 5,
+   "id": "ff061259-75d7-4c0e-bc98-341fbbb84cfa",
    "metadata": {
     "tags": []
    },
@@ -182,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "2214f439-1584-48d2-8c68-9dbe66d51793",
+   "execution_count": 6,
+   "id": "54ab5166-460a-43cd-ade3-0ad70a30665d",
    "metadata": {
     "tags": []
    },
@@ -194,30 +209,31 @@
        "\n",
        "Call:\n",
        "glm(formula = Is.Attrition ~ BusinessTravel + EnvironmentSatisfaction + \n",
-       "    JobInvolvement + JobSatisfaction + OverTime, family = binomial(), \n",
-       "    data = training)\n",
+       "    JobInvolvement + JobSatisfaction + NumCompaniesWorked + OverTime, \n",
+       "    family = binomial(), data = training)\n",
        "\n",
        "Deviance Residuals: \n",
        "    Min       1Q   Median       3Q      Max  \n",
-       "-1.6704  -0.5627  -0.4045  -0.2457   2.7264  \n",
+       "-1.6459  -0.5608  -0.3971  -0.2461   2.7632  \n",
        "\n",
        "Coefficients:\n",
        "                                Estimate Std. Error z value Pr(>|z|)    \n",
-       "(Intercept)                      0.27663    0.70500   0.392 0.694772    \n",
-       "BusinessTravelTravel_Frequently  1.79198    0.52955   3.384 0.000715 ***\n",
-       "BusinessTravelTravel_Rarely      1.06411    0.50296   2.116 0.034370 *  \n",
-       "EnvironmentSatisfaction         -0.34251    0.09827  -3.485 0.000492 ***\n",
-       "JobInvolvement                  -0.65425    0.14743  -4.438 9.09e-06 ***\n",
-       "JobSatisfaction                 -0.42500    0.09856  -4.312 1.62e-05 ***\n",
-       "OverTimeYes                      1.53397    0.21990   6.976 3.04e-12 ***\n",
+       "(Intercept)                      0.13670    0.71265   0.192 0.847880    \n",
+       "BusinessTravelTravel_Frequently  1.81056    0.53006   3.416 0.000636 ***\n",
+       "BusinessTravelTravel_Rarely      1.05569    0.50307   2.098 0.035862 *  \n",
+       "EnvironmentSatisfaction         -0.34375    0.09839  -3.494 0.000476 ***\n",
+       "JobInvolvement                  -0.66205    0.14783  -4.478 7.52e-06 ***\n",
+       "JobSatisfaction                 -0.42038    0.09883  -4.254 2.10e-05 ***\n",
+       "NumCompaniesWorked               0.05495    0.04222   1.302 0.193050    \n",
+       "OverTimeYes                      1.52364    0.22014   6.921 4.48e-12 ***\n",
        "---\n",
        "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
        "\n",
        "(Dispersion parameter for binomial family taken to be 1)\n",
        "\n",
        "    Null deviance: 679.79  on 799  degrees of freedom\n",
-       "Residual deviance: 577.53  on 793  degrees of freedom\n",
-       "AIC: 591.53\n",
+       "Residual deviance: 575.87  on 792  degrees of freedom\n",
+       "AIC: 591.87\n",
        "\n",
        "Number of Fisher Scoring iterations: 5\n"
       ]
@@ -230,7 +246,7 @@
     "# Making the predictions.  Don't include Over18 since all response is Yes.  Use only upto 3* stat significant.\n",
     "logmod <- glm(\n",
     "  formula = Is.Attrition ~ BusinessTravel +  EnvironmentSatisfaction +\n",
-    "    JobInvolvement + JobSatisfaction + OverTime,\n",
+    "    JobInvolvement + JobSatisfaction + NumCompaniesWorked + OverTime,\n",
     "  data = training,\n",
     "  family = binomial()\n",
     ")\n",
@@ -240,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "c032c0e5-1291-494a-857c-092e455712f6",
+   "execution_count": 7,
+   "id": "07e01639-ecde-488d-b30b-2c5ca86ea9de",
    "metadata": {
     "tags": []
    },
@@ -259,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "40449f67-9b32-478d-8c8d-c72e4315a872",
+   "execution_count": 8,
+   "id": "42639f30-9200-43ed-b85e-cadc99537770",
    "metadata": {
     "tags": []
    },
@@ -281,7 +297,7 @@
        "roc.formula(formula = training$Is.Attrition ~ training$Probability,     plot = FALSE, auc = TRUE)\n",
        "\n",
        "Data: training$Probability in 679 controls (training$Is.Attrition 0) < 121 cases (training$Is.Attrition 1).\n",
-       "Area under the curve: 0.7698"
+       "Area under the curve: 0.77"
       ]
      },
      "metadata": {},
@@ -294,26 +310,15 @@
     "  formula = training$Is.Attrition ~ training$Probability,\n",
     "  plot = FALSE,\n",
     "  auc = TRUE\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "ab9e6733-929c-4c77-b2d9-d72020aea228",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    ")\n",
     "# Turn the probabilities into predictions\n",
     "training$Prediction = ifelse(training$Probability >= 0.15, 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "15c2540f-f8c9-4eb9-8e2f-82a6367a87b7",
+   "execution_count": 9,
+   "id": "7be20f53-27f8-44f4-a05f-b9c222700d87",
    "metadata": {
     "tags": []
    },
@@ -323,8 +328,8 @@
       "text/plain": [
        "   \n",
        "      0   1\n",
-       "  0 482  35\n",
-       "  1 197  86"
+       "  0 487  35\n",
+       "  1 192  86"
       ]
      },
      "metadata": {},
@@ -341,8 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "d553297f-9615-4c3f-9bc1-701e9573bd8b",
+   "execution_count": 10,
+   "id": "69d994e9-b9f0-4707-9c9a-e174d3033b58",
    "metadata": {
     "tags": []
    },
@@ -351,9 +356,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.71\n",
+      "Accuracy: 0.71625\n",
       "Sensitivity: 0.710743801652893\n",
-      "Specificity: 0.709867452135493\n"
+      "Specificity: 0.717231222385862\n"
      ]
     }
    ],
@@ -373,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "9b66d56f-ff83-4f44-ab04-9810d47fe4da",
+   "execution_count": 11,
+   "id": "e24ca0c8-f3a9-4c90-9de9-0ca75f4928cd",
    "metadata": {
     "tags": []
    },
@@ -391,8 +396,8 @@
       "text/plain": [
        "   \n",
        "      0   1\n",
-       "  0 117   4\n",
-       "  1  54  25"
+       "  0 118   6\n",
+       "  1  53  23"
       ]
      },
      "metadata": {},
@@ -410,8 +415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "8708e8b9-8e73-4ae1-ac72-f844579f29dc",
+   "execution_count": 12,
+   "id": "dd60d6d1-7160-4036-8ff2-4f4307ccbe04",
    "metadata": {
     "tags": []
    },
@@ -420,9 +425,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.71\n",
-      "Sensitivity: 0.862068965517241\n",
-      "Specificity: 0.684210526315789\n"
+      "Accuracy: 0.705\n",
+      "Sensitivity: 0.793103448275862\n",
+      "Specificity: 0.690058479532164\n"
      ]
     }
    ],
@@ -437,13 +442,13 @@
     "\n",
     "# Calculate and show the specificity\n",
     "specificity <- conf_matrix_test[1,1]/sum(conf_matrix_test[,1])\n",
-    "message(\"Specificity: \", specificity)\n"
+    "message(\"Specificity: \", specificity)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f1a4b38-4e3d-4a01-a1bc-ba127a782c0f",
+   "id": "d09bd76c-a685-415f-a46b-6daec2b3814f",
    "metadata": {},
    "outputs": [],
    "source": []
