--- a/App6.2.2_Model1_Selected_variables_Stat_Sign_upto2staronly.ipynb
+++ b/App6.2.2_Model1_Selected_variables_Stat_Sign_upto2staronly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "baf81c4a-a3df-40f2-8c40-04774831c9bf",
    "metadata": {
     "tags": []
@@ -17,8 +17,6 @@
     }
    ],
    "source": [
-    "library(pROC)\n",
-    "\n",
     "# Define the directory structure using file.path()\n",
     "my_dir <- file.path(\"C:/Users/GPEL_HPENVY/Desktop/Project_Predictive_Analytics_R\")\n",
     "\n",
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "24ff76c2-2a0e-453e-93a3-5ee4d8bfd01c",
    "metadata": {
     "tags": []
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "4d1f265d-e796-4ecb-b821-66d3cb8160dc",
    "metadata": {
     "tags": []
@@ -153,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "e5d8252f-04fb-41ce-9477-b995f9e641aa",
+   "execution_count": 4,
+   "id": "621294ce-c3cf-45a1-8c4d-68562eadb1ba",
    "metadata": {
     "tags": []
    },
@@ -166,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "ff061259-75d7-4c0e-bc98-341fbbb84cfa",
+   "execution_count": 5,
+   "id": "55c023f7-1451-4a12-ac56-fadee1c5cc96",
    "metadata": {
     "tags": []
    },
@@ -182,8 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "54ab5166-460a-43cd-ade3-0ad70a30665d",
+   "execution_count": 6,
+   "id": "3dd6e18e-ca8d-47e5-80d0-94ea60c43c06",
    "metadata": {
     "tags": []
    },
@@ -193,34 +191,45 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "glm(formula = Is.Attrition ~ BusinessTravel + EnvironmentSatisfaction + \n",
-       "    JobInvolvement + JobSatisfaction + NumCompaniesWorked + OverTime, \n",
-       "    family = binomial(), data = training)\n",
+       "glm(formula = Is.Attrition ~ BusinessTravel + OverTime + JobRole + \n",
+       "    DistanceFromHome + JobSatisfaction + EnvironmentSatisfaction + \n",
+       "    JobInvolvement + NumCompaniesWorked + WorkLifeBalance, family = binomial(), \n",
+       "    data = training)\n",
        "\n",
        "Deviance Residuals: \n",
        "    Min       1Q   Median       3Q      Max  \n",
-       "-1.6459  -0.5608  -0.3971  -0.2461   2.7632  \n",
+       "-1.6482  -0.5358  -0.2931  -0.1270   3.0825  \n",
        "\n",
        "Coefficients:\n",
-       "                                Estimate Std. Error z value Pr(>|z|)    \n",
-       "(Intercept)                      0.13670    0.71265   0.192 0.847880    \n",
-       "BusinessTravelTravel_Frequently  1.81056    0.53006   3.416 0.000636 ***\n",
-       "BusinessTravelTravel_Rarely      1.05569    0.50307   2.098 0.035862 *  \n",
-       "EnvironmentSatisfaction         -0.34375    0.09839  -3.494 0.000476 ***\n",
-       "JobInvolvement                  -0.66205    0.14783  -4.478 7.52e-06 ***\n",
-       "JobSatisfaction                 -0.42038    0.09883  -4.254 2.10e-05 ***\n",
-       "NumCompaniesWorked               0.05495    0.04222   1.302 0.193050    \n",
-       "OverTimeYes                      1.52364    0.22014   6.921 4.48e-12 ***\n",
+       "                                 Estimate Std. Error z value Pr(>|z|)    \n",
+       "(Intercept)                     -2.093375   1.365246  -1.533 0.125194    \n",
+       "BusinessTravelTravel_Frequently  1.971818   0.558940   3.528 0.000419 ***\n",
+       "BusinessTravelTravel_Rarely      1.181131   0.523782   2.255 0.024133 *  \n",
+       "OverTimeYes                      1.824873   0.248857   7.333 2.25e-13 ***\n",
+       "JobRoleHuman Resources           3.410067   1.154509   2.954 0.003140 ** \n",
+       "JobRoleLaboratory Technician     3.839303   1.081425   3.550 0.000385 ***\n",
+       "JobRoleManager                   2.009682   1.182956   1.699 0.089345 .  \n",
+       "JobRoleManufacturing Director    2.011612   1.140208   1.764 0.077690 .  \n",
+       "JobRoleResearch Director         1.325852   1.291003   1.027 0.304424    \n",
+       "JobRoleResearch Scientist        2.770395   1.081368   2.562 0.010409 *  \n",
+       "JobRoleSales Executive           3.298433   1.073310   3.073 0.002118 ** \n",
+       "JobRoleSales Representative      4.542725   1.115564   4.072 4.66e-05 ***\n",
+       "DistanceFromHome                 0.017462   0.008547   2.043 0.041041 *  \n",
+       "JobSatisfaction                 -0.477030   0.106652  -4.473 7.72e-06 ***\n",
+       "EnvironmentSatisfaction         -0.353531   0.106622  -3.316 0.000914 ***\n",
+       "JobInvolvement                  -0.768364   0.159308  -4.823 1.41e-06 ***\n",
+       "NumCompaniesWorked               0.097990   0.046091   2.126 0.033503 *  \n",
+       "WorkLifeBalance                 -0.380829   0.155398  -2.451 0.014259 *  \n",
        "---\n",
        "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
        "\n",
        "(Dispersion parameter for binomial family taken to be 1)\n",
        "\n",
        "    Null deviance: 679.79  on 799  degrees of freedom\n",
-       "Residual deviance: 575.87  on 792  degrees of freedom\n",
-       "AIC: 591.87\n",
+       "Residual deviance: 500.16  on 782  degrees of freedom\n",
+       "AIC: 536.16\n",
        "\n",
-       "Number of Fisher Scoring iterations: 5\n"
+       "Number of Fisher Scoring iterations: 7\n"
       ]
      },
      "metadata": {},
@@ -228,10 +237,11 @@
     }
    ],
    "source": [
-    "# Making the predictions.  Don't include Over18 since all response is Yes.  Use only upto 3* stat significant.\n",
+    "# Making the predictions.  Don't include Over18 since all is Yes. Use upto 2* statistical significant.\n",
     "logmod <- glm(\n",
-    "  formula = Is.Attrition ~ BusinessTravel +  EnvironmentSatisfaction +\n",
-    "    JobInvolvement + JobSatisfaction + NumCompaniesWorked + OverTime,\n",
+    "  formula = Is.Attrition ~ BusinessTravel + OverTime + JobRole +\n",
+    "    DistanceFromHome + JobSatisfaction + EnvironmentSatisfaction + JobInvolvement + \n",
+    "     NumCompaniesWorked + WorkLifeBalance,\n",
     "  data = training,\n",
     "  family = binomial()\n",
     ")\n",
@@ -241,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "07e01639-ecde-488d-b30b-2c5ca86ea9de",
+   "execution_count": 7,
+   "id": "4ccb8300-a677-4ba6-88b3-5089004268fc",
    "metadata": {
     "tags": []
    },
@@ -260,93 +270,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "42639f30-9200-43ed-b85e-cadc99537770",
+   "execution_count": 8,
+   "id": "d152d842-f74b-43db-a871-392a427bf5fd",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting levels: control = 0, case = 1\n",
-      "Setting direction: controls < cases\n"
+     "ename": "ERROR",
+     "evalue": "Error in roc(formula = training$Is.Attrition ~ training$Probability, auc = TRUE): could not find function \"roc\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in roc(formula = training$Is.Attrition ~ training$Probability, auc = TRUE): could not find function \"roc\"\nTraceback:\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "Call:\n",
-       "roc.formula(formula = training$Is.Attrition ~ training$Probability,     plot = FALSE, auc = TRUE)\n",
-       "\n",
-       "Data: training$Probability in 679 controls (training$Is.Attrition 0) < 121 cases (training$Is.Attrition 1).\n",
-       "Area under the curve: 0.77"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "# Compute ROC and Printing the area under the ROC curve\n",
     "roc(\n",
     "  formula = training$Is.Attrition ~ training$Probability,\n",
-    "  plot = FALSE,\n",
     "  auc = TRUE\n",
-    ")\n",
-    "# Turn the probabilities into predictions\n",
-    "training$Prediction = ifelse(training$Probability >= 0.15, 1, 0)"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "7be20f53-27f8-44f4-a05f-b9c222700d87",
+   "execution_count": null,
+   "id": "4a3d659b-22ae-442c-91ef-6eae8421afb9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   \n",
-       "      0   1\n",
-       "  0 487  35\n",
-       "  1 192  86"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Turn the probabilities into predictions\n",
+    "training$Prediction = ifelse(training$Probability >= 0.2, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60e0e4ec-f182-41d9-9e36-1a11ef74d7d6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# Get the confusion matrix\n",
     "conf_matrix_train <- table(training$Prediction, training$Is.Attrition)\n",
     "\n",
     "# Show the confusion matrix\n",
-    "conf_matrix_train"
+    "conf_matrix_train\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "69d994e9-b9f0-4707-9c9a-e174d3033b58",
+   "execution_count": null,
+   "id": "d6bd9a29-c6b5-48f6-9426-f911d7d21a40",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.71625\n",
-      "Sensitivity: 0.710743801652893\n",
-      "Specificity: 0.717231222385862\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate and show the accuracy\n",
     "accuracy <- sum(diag(conf_matrix_train))/sum(conf_matrix_train)\n",
@@ -363,59 +346,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "e24ca0c8-f3a9-4c90-9de9-0ca75f4928cd",
+   "execution_count": null,
+   "id": "95c2b080-8207-440e-8eba-9f24bbc82994",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Confusion matrix for model 1 Final:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "   \n",
-       "      0   1\n",
-       "  0 118   6\n",
-       "  1  53  23"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing the model - using the testing dataset and using the Prediction models\n",
     "testing$ProbabilityTest <- predict(logmod, newdata = testing, type = \"response\")\n",
-    "testing$PredictionTest <- ifelse(testing$ProbabilityTest >= 0.15, 1, 0)\n",
+    "testing$PredictionTest <- ifelse(testing$ProbabilityTest >= 0.2, 1, 0)\n",
     "conf_matrix_test <- table(testing$PredictionTest, testing$Is.Attrition)\n",
-    "message(\"Confusion matrix for model 1 Final:\")\n",
+    "message(\"Confusion matrix for model 1:\")\n",
     "conf_matrix_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "dd60d6d1-7160-4036-8ff2-4f4307ccbe04",
+   "execution_count": null,
+   "id": "56842960-ac11-4a63-931f-5c9ac936c98d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.705\n",
-      "Sensitivity: 0.793103448275862\n",
-      "Specificity: 0.690058479532164\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate and show the accuracy\n",
     "accuracy <- sum(diag(conf_matrix_test))/sum(conf_matrix_test)\n",
@@ -427,13 +380,13 @@
     "\n",
     "# Calculate and show the specificity\n",
     "specificity <- conf_matrix_test[1,1]/sum(conf_matrix_test[,1])\n",
-    "message(\"Specificity: \", specificity)"
+    "message(\"Specificity: \", specificity)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09bd76c-a685-415f-a46b-6daec2b3814f",
+   "id": "01a5977c-973e-435f-afd0-4bc917626328",
    "metadata": {},
    "outputs": [],
    "source": []
